[package]
name = "ashdaemon"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
mimalloc = { version = "0.1", default-features = false }

# Use ce-ashmaize crate from local path or git.
# Option A: local path (if you cloned repo inside this workspace next to Cargo.toml)
# Updated to point to the `ce-ashmaize` folder inside this repository.
ashmaize = { path = "./ce-ashmaize" }

# Option B: use git (if you prefer)
# ce-ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize" }

[profile.release]
lto = true
codegen-units = 1
[features]
default = ["native_ashmaize"]
native_ashmaize = []

